--- a/templates/01_capi-cluster.yaml
+++ b/templates/01_capi-cluster.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
-    kind: AWSCluster
+    kind: OpenStackCluster
     name: ${INFRA_ID}
     namespace: openshift-cluster-api
