--- a/templates/01_capi-cluster.yaml
+++ b/templates/01_capi-cluster.yaml
@@ -4,6 +4,11 @@ metadata:
   name: ${INFRA_ID}
   namespace: openshift-cluster-api-guests
 spec:
+  controlPlaneRef:
+    apiVersion: cluster.openshift.io/v1alpha1
+    kind: OpenShiftControlPlane
+    name: ${INFRA_ID}
+    namespace: openshift-cluster-api-guests
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
     kind: AWSCluster
